# product-configurator

./: .env.docker.example  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  MIGRATION_PLAN.md  Makefile  README.md  SPEC.md  docker-compose.debug.yml  docker-compose.yml
.claude/: settings.json
.claude/agents/: architect-reviewer.md  business-analyst.md  code-reviewer.md  nextjs-developer.md  prompt-engineer.md  simple-task.md
.claude/commands/: create-issue.md  work-on-issue.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml  user-story.yml
.github/workflows/: build-backend-reusable.yml  claude-code-review.yml  claude.yml  deploy-backend-main.yml  deploy-backend-pullrequest.yml  deploy-backend-reusable.yml  deploy-backend.yml  deploy-frontend-main.yml  deploy-frontend-pullrequest.yml  deploy-frontend-reusable.yml  deploy-frontend.yml  test-backend-reusable.yml  test-backend.yml  test-frontend-reusable.yml  test-frontend.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
config/: README.md  prod.env.example  test.env.example
docker/: README.md
docs/: ai-friendly-refactoring.md  github-environments-setup.md  github-secrets-frontend.md  naming-conventions.md
docs/design/: product-configurator-design.md
docs/plans/: 2026-01-22-109-frontend-deployment-design.md  2026-01-22-frontend-deployment-implementation.md  2026-01-22-pr-workflow-quality-gates-design.md  2026-01-22-pr-workflow-quality-gates.md  2026-01-23-product-style-hierarchy-design.md  2026-01-31-77-edit-client-details.md
features/: TEMPLATE.md
frontend/: README.md  package.json
infra/: main.bicep  main.json
infra/environments/: prod.bicepparam  test.bicepparam
infra/modules/: containerApp.bicep  containerAppsEnvironment.bicep  containerRegistry.bicep  containerRegistryRoleAssignment.bicep  managedIdentity.bicep  postgresFlexible.bicep  resourceGroup.bicep  roleAssignments.bicep  sharedContainerRegistry.bicep  sharedResourceGroup.bicep  staticWebApp.bicep  storageAccount.bicep  storageAccountRoleAssignment.bicep
plans/: 2026-01-18-76-create-client.md  2026-01-18-core-client-management.md  2026-01-19-101-infrastructure-setup.md  2026-01-23-80-create-product-for-client.md  2026-01-23-96-toggle-client-status.md  2026-01-29-156-backend-test-fixtures.md  2026-01-29-174-rename-configure-to-customize.md
scripts/: README.md  abandon-feature.sh  complete-feature.sh  deploy.sh  move-to-analysis.sh  new-feature.sh  start-development.sh
src/backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
src/backend/app/: __init__.py  main.py
src/backend/app/api/: deps.py
src/backend/app/api/v1/: router.py
src/backend/app/api/v1/routes/: clients.py  configurations.py  jobs.py  product_customizations.py  products.py  styles.py
src/backend/app/blender/scripts/: __init__.py
src/backend/app/core/: config.py  exceptions.py  security.py
src/backend/app/db/: __init__.py  session.py
src/backend/app/db/models/: __init__.py  api_key.py  base.py  client.py  configuration.py  job.py  product.py  product_customization.py  style.py  user.py
src/backend/app/repositories/: __init__.py  base.py  client.py  configuration.py  job.py  product.py  product_customization.py  style.py
src/backend/app/schemas/: __init__.py  base.py  client.py  configuration.py  job.py  product.py  product_customization.py  style.py
src/backend/app/services/: __init__.py  blob_storage.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 20260117_drop_api_keys.py  68727358918b_initial.py
src/backend/tests/: conftest.py
src/backend/tests/api/: test_clients.py  test_configurations.py  test_health.py  test_jobs.py  test_product_customizations.py  test_products.py  test_styles.py
src/backend/tests/blender/: __init__.py
src/backend/tests/repositories/: test_base_repository.py
src/frontend/: .env.production  .env.test  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/e2e/: smoke.spec.ts
src/frontend/playwright-report/: index.html
src/frontend/public/: staticwebapp.config.json
src/frontend/src/: App.tsx  index.css  main.tsx
src/webapp/: package.json  pnpm-lock.yaml
src/webapp/app/: layout.tsx  page.tsx
src/webapp/context/: ConfigurationContext.tsx
src/webapp/lib/: materials.ts
src/webapp/types/: configurator.ts
test-blender-files/: RANGE HOOD_JAN  19 2026.blend
(+60 files in other folders)
