[project]
name = "mss-customizer-backend"
version = "0.1.0"
description = "MSS Industries Product Customizer - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "jsonschema>=4.20.0",
    "azure-storage-blob>=12.19.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportPrivateImportUsage = true
# SQLAlchemy __tablename__ causes false positives
reportAssignmentType = false
# FastAPI exception handling uses dynamic types
reportUnknownMemberType = false
reportUnknownVariableType = false
include = ["app"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.0",
    "httpx>=0.26.0",
    "pyright>=1.1.350",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
